package alexandre_davi_miguel.busca_oferta_api.framework;

public interface PoliticaLimpezaStrategy {
	void executarLimpeza();
}
